--- a/src/app/links/links.page.html
+++ b/src/app/links/links.page.html
@@ -5,5 +5,5 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-button href="/nested">Go to tabs root</ion-button>
+  <ion-button href="/tabs">Go to tabs root</ion-button>
 </ion-content>
