--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,11 +1,11 @@
 <ion-tabs>
-  <ion-tab label="Home" icon="home" href="/tabs/(home:home)">
+  <ion-tab label="Home" icon="home" href="/tabs/{{ pageId }}/nested/(home:home)">
     <ion-router-outlet name="home"></ion-router-outlet>
   </ion-tab>
-  <ion-tab label="About" icon="information-circle" href="/tabs/(about:about)">
+  <ion-tab label="About" icon="information-circle" href="/tabs/{{ pageId }}/nested/(about:about)">
     <ion-router-outlet name="about"></ion-router-outlet>
   </ion-tab>
-  <ion-tab label="Contact" icon="contacts" href="/tabs/(contact:contact)">
+  <ion-tab label="Contact" icon="contacts" href="/tabs/{{ pageId }}/nested/(contact:contact)">
     <ion-router-outlet name="contact"></ion-router-outlet>
   </ion-tab>
 </ion-tabs>
